--- a/extension.toml
+++ b/extension.toml
@@ -1,16 +1,20 @@
-id = "phpcs-lsp"
+id = "phpcs"
 name = "PHPCS"
 description = "PHP CodeSniffer Language Server for linting PHP code"
 version = "0.1.0"
 schema_version = 1
 authors = ["Mike Bronner <mike.bronner@icloud.com>"]
-repository = "https://github.com/mikebronner/zed-phpcs-lsp"
+repository = "https://github.com/GeneaLabs/zed-phpcs-lsp"
 
 [lib]
 kind = "Rust"
 version = "0.6.0"
 
-[language_servers.phpcs-lsp-server]
+[language_servers.phpcs]
 name = "PHPCS"
 languages = ["PHP"]
 language_ids = { PHP = "php" }
+
+# Default settings to enable the language server automatically
+[language_servers.phpcs.settings]
+standard = "PSR12"
