--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "phpcs"
 version = "0.1.0"
 edition = "2021"
-authors = ["Mike Bronner <mike.bronner@icloud.com>"]
+authors = ["Mike Bronner <mike@genealabs.com>"]
 description = "PHP CodeSniffer Language Server extension for Zed"
 license = "MIT"
 repository = "https://github.com/GeneaLabs/zed-phpcs-lsp"
