--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Rust build artifacts
 target/
 
-# LSP server build artifacts  
+# LSP server build artifacts
 lsp-server/target/
 
 # Built binaries (removed - these are deliverables users need)
@@ -28,6 +28,7 @@ __pycache__/
 
 # Development/debug files
 .ropeproject/
-.claude/
-
-# Bundled PHPCS PHAR files (removed - now committing bin/ folder)
+.claude*/
+.swarm/
+lsp-server/.claude*/
+lsp-server/.swarm/
