--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -2,7 +2,7 @@ name: Update Version on Release
 
 on:
   release:
-    types: [published]
+    types: [created]
 
 permissions:
   contents: write
@@ -61,6 +61,7 @@ jobs:
           grep "^version =" lsp-server/Cargo.toml
 
       - name: Commit and push changes
+        id: commit_changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
@@ -68,10 +69,41 @@ jobs:
           # Check if there are any changes to commit
           if git diff --quiet && git diff --cached --quiet; then
             echo "No changes to commit"
+            echo "new_commit_sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
           else
             git add -A
             git commit -m "chore: update version to ${{ steps.extract_version.outputs.version }} [skip ci]"
             git pull origin main
             git push origin main
+            NEW_COMMIT_SHA=$(git rev-parse HEAD)
+            echo "new_commit_sha=${NEW_COMMIT_SHA}" >> $GITHUB_OUTPUT
             echo "All changed files updated and pushed to main branch"
+            echo "New commit SHA: ${NEW_COMMIT_SHA}"
           fi
+
+      - name: Update release and tag to point to new commit
+        if: steps.commit_changes.outputs.new_commit_sha != ''
+        run: |
+          # Update the tag to point to the new commit
+          echo "Updating tag ${{ github.event.release.tag_name }} to point to commit ${{ steps.commit_changes.outputs.new_commit_sha }}"
+
+          # Delete the old tag locally and remotely
+          git tag -d ${{ github.event.release.tag_name }} || true
+          git push origin :refs/tags/${{ github.event.release.tag_name }} || true
+
+          # Create new tag pointing to the new commit
+          git tag ${{ github.event.release.tag_name }} ${{ steps.commit_changes.outputs.new_commit_sha }}
+          git push origin ${{ github.event.release.tag_name }}
+
+          echo "Updated tag ${{ github.event.release.tag_name }} to point to commit ${{ steps.commit_changes.outputs.new_commit_sha }}"
+
+          # Update the release to point to the new commit with version updates
+          curl -L \
+            -X PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "https://api.github.com/repos/${{ github.repository }}/releases/${{ github.event.release.id }}" \
+            -d "{\"target_commitish\":\"${{ steps.commit_changes.outputs.new_commit_sha }}\"}"
+
+          echo "Updated release ${{ github.event.release.tag_name }} to point to commit ${{ steps.commit_changes.outputs.new_commit_sha }}"
