--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -63,8 +63,8 @@ jobs:
       - name: Commit and push changes
         id: commit_changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
 
           # Check if there are any changes to commit
           if git diff --quiet && git diff --cached --quiet; then
