Updated release steps dependencies.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,6 +119,7 @@ jobs:
 
   build-lsp-server:
     name: Build LSP Server
+    needs: update-version
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
