ci: 🚀 Add Zed extension publishing workflow
- Add automated publishing to GeneaLabs/extensions fork for testing
- Uses huacnlee/zed-extension-action for PR creation
- Configured to run after LSP server and PHAR downloads complete
- Requires ZED_PUBLISHING_TOKEN with repo and workflow scopes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -266,3 +266,17 @@ jobs:
             phpcs.phar.tar.gz
             phpcbf.phar.tar.gz
           token: ${{ secrets.GITHUB_TOKEN }}
+
+  publish:
+    name: Publish Zed Extension
+    runs-on: ubuntu-latest
+    needs:
+      - download-phars
+      - build-lsp-server
+    steps:
+      - uses: huacnlee/zed-extension-action@v1
+        with:
+          extension-name: phpcs
+          push-to: GeneaLabs/extensions
+        env:
+          COMMITTER_TOKEN: ${{ secrets.ZED_PUBLISHING_TOKEN }}
