--- a/lsp-server/Cargo.toml
+++ b/lsp-server/Cargo.toml
@@ -16,6 +16,7 @@ tokio-util = { version = "0.7", features = ["compat"] }
 anyhow = "1.0"
 regex = "1.0"
 url = "2.0"
+sha2 = "0.10"
 
 [dev-dependencies]
 tokio-test = "0.4"
