--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,14 +9,19 @@ on:
         description: 'Release tag to build assets for'
         required: true
 
+env:
+  GITHUB_TOKEN: ${{ secrets.OWNER_PAT || secrets.GITHUB_TOKEN }}
+
 jobs:
   update-version:
     runs-on: ubuntu-latest
+    outputs:
+        new_version: ${{ steps.extract_version.outputs.version }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.OWNER_PAT || secrets.GITHUB_TOKEN }}
+          token: ${{ env.GITHUB_TOKEN }}
           fetch-depth: 0
           ref: main
 
@@ -85,8 +90,6 @@ jobs:
 
       - name: Update tag and release
         if: steps.commit_changes.outputs.new_commit_sha != ''
-        env:
-          GITHUB_TOKEN: ${{ secrets.OWNER_PAT || secrets.GITHUB_TOKEN }}
         run: |
           TAG_NAME="${{ github.event.release.tag_name }}"
           RELEASE_ID="${{ github.event.release.id }}"
@@ -194,8 +197,6 @@ jobs:
       - name: Upload Release Asset
         if: github.event_name == 'release'
         uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ${{ env.ASSET_PATH }}
@@ -208,7 +209,7 @@ jobs:
         with:
           tag_name: ${{ github.event.inputs.tag }}
           files: ${{ env.ASSET_PATH }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ env.GITHUB_TOKEN }}
 
   download-phars:
     name: Download and Package PHAR Files
@@ -238,8 +239,6 @@ jobs:
       - name: Upload PHPCS PHAR
         if: github.event_name == 'release'
         uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: phpcs.phar.tar.gz
@@ -249,8 +248,6 @@ jobs:
       - name: Upload PHPCBF PHAR
         if: github.event_name == 'release'
         uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: phpcbf.phar.tar.gz
@@ -265,7 +262,7 @@ jobs:
           files: |
             phpcs.phar.tar.gz
             phpcbf.phar.tar.gz
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ env.GITHUB_TOKEN }}
 
   publish:
     name: Publish Zed Extension
@@ -273,10 +270,12 @@ jobs:
     needs:
       - download-phars
       - build-lsp-server
+      - update-version
     steps:
       - uses: huacnlee/zed-extension-action@v1
         with:
           extension-name: phpcs
           push-to: GeneaLabs/extensions
+          tag-name: ${{ needs.update-version.outputs.new_version }}
         env:
           COMMITTER_TOKEN: ${{ secrets.ZED_PUBLISHING_TOKEN }}
