--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -154,36 +154,28 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install musl tools
-        if: contains(matrix.target, 'linux-musl')
+      - name: Install musl tools (x86_64)
+        if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
           sudo apt-get update
           sudo apt-get install -y musl-tools
 
-      - name: Install cross-compilation tools (aarch64-musl)
+      - name: Install cross (aarch64-musl)
         if: matrix.target == 'aarch64-unknown-linux-musl'
         run: |
-          # Install cross-compilation toolchain for aarch64-musl
-          sudo apt-get install -y clang llvm
-          # Download and install musl cross-compiler
-          curl -LO https://musl.cc/aarch64-linux-musl-cross.tgz
-          tar xzf aarch64-linux-musl-cross.tgz
-          sudo mv aarch64-linux-musl-cross /opt/
-          echo "/opt/aarch64-linux-musl-cross/bin" >> $GITHUB_PATH
+          cargo install cross --git https://github.com/cross-rs/cross
 
-      - name: Configure cross-compilation (aarch64-musl)
-        if: matrix.target == 'aarch64-unknown-linux-musl'
-        run: |
-          mkdir -p ~/.cargo
-          cat >> ~/.cargo/config.toml << EOF
-          [target.aarch64-unknown-linux-musl]
-          linker = "aarch64-linux-musl-gcc"
-          EOF
-
-      - name: Build LSP Server
+      - name: Build LSP Server (native)
+        if: matrix.target != 'aarch64-unknown-linux-musl'
         run: |
           cd lsp-server
           cargo build --release --target ${{ matrix.target }}
+
+      - name: Build LSP Server (cross)
+        if: matrix.target == 'aarch64-unknown-linux-musl'
+        run: |
+          cd lsp-server
+          cross build --release --target ${{ matrix.target }}
 
       - name: Prepare binary
         shell: bash
