feat: ✨ Add PHPCS code actions for auto-fixing issues
- Add code actions for fixing PHPCS violations:
  - 🎯 Fix single issue (applies fix to specific line)
  - 🛠️ Fix all issues of a sniff type
  - 🛠️ Fix all PHPCS issues (runs full phpcbf)
- Implement phpcbf integration with proper exit code handling

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ lsp-server/target/
 # IDE and editor files
 .vscode/
 .idea/
+.zed/
 *.swp
 *.swo
 *~
@@ -34,3 +35,6 @@ __pycache__/
 .swarm/
 lsp-server/.claude*/
 lsp-server/.swarm/
+
+# Test files
+test-files/
