--- a/lsp-server/Cargo.toml
+++ b/lsp-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "phpcs-lsp-server"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 [[bin]]
@@ -18,6 +18,7 @@ regex = "1.0"
 url = "2.0"
 sha2 = "0.10"
 lz4_flex = "0.11"
+urlencoding = "2.1"
 
 [dev-dependencies]
 tokio-test = "0.4"
